--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 			<ul id="ofi_paf">
 			</ul>
 		</div><br>
-		<!-- <div><br>
+		<div><br>
 			<button onclick=about()>About</button>
 			<button onclick=report()>Report Error</button>
-		</div> -->
+		</div>
 	</div>
 
     <div id="map">
